Fix that private file button overflow because it has been annoying me for 3 years now

--- a/style/grey.css
+++ b/style/grey.css
@@ -78,3 +78,7 @@ div#jcontrols_button {
 .profilebar_block {
 	display: none;
 }
+
+.block_private_files .singlebutton input[type=submit] {
+	white-space: normal;
+}
